# auto-oss

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  LICENSE-MIT  README.md  SPEC.md  auto-oss.yml
.github/workflows/: ci.yml  release.yml
docs/: CLI.md  CONTRIBUTING.md  DESIGN.md  SECURITY.md  SPEC.md
docs/ja/: CLI.md  DESIGN.md  SECURITY.md  SPEC.md
src/: backend.rs  config_cmd.rs  fix.rs  gates.rs  init_cmd.rs  main.rs  metadata.rs  policy.rs  status.rs  verify.rs
tests/: integration.rs
