[package]
name = "auto-oss"
version = "0.1.2"
edition = "2021"
description = "Reference CLI for the auto-oss protocol: user-side agent contributions to opted-in repositories"
license = "MIT OR Apache-2.0"
repository = "https://github.com/q0tzly/auto-oss"
readme = "README.md"
keywords = ["oss", "agent", "contribution", "protocol", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "autos"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
